tests/ui/basic.rs
use beetl::MeltRecord;

#[derive(MeltRecord)]
enum EnumRecord {
    Variant
}

fn main() {}
